// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Detail should pass the error message to the DataStateNotifier component 1`] = `
<DataStateNotifier
  dataError="Oops something went wrong :("
  dataLoading=""
  resetDataError={[Function]}
>
  <div
    className="Detail"
  >
    <DetailHeader
      item={
        Object {
          "address": "Berlin, 12051, DE",
          "description": "Locked cellar in Warthestrasse 8, Kryptonite U-lock with cable both tyres locked to frame. Someone got in and took the whole thing as well as forced some storage doors open. ",
          "id": 94547,
          "location_description": null,
          "location_type": null,
          "media": Object {
            "image_url": null,
            "image_url_thumb": null,
          },
          "occurred_at": 1543309200,
          "source": Object {
            "api_url": "https://bikeindex.org/api/v1/bikes/480323",
            "html_url": "https://bikeindex.org/bikes/480323",
            "name": "BikeIndex.org",
          },
          "title": "Stolen 2015 Gepida Alboin crs 500(silver, gray or bare metal)",
          "type": "Theft",
          "type_properties": null,
          "updated_at": 1550866132,
          "url": "https://bikewise.org/api/v1/incidents/94547",
        }
      }
    />
    <DetailInfos
      item={
        Object {
          "address": "Berlin, 12051, DE",
          "description": "Locked cellar in Warthestrasse 8, Kryptonite U-lock with cable both tyres locked to frame. Someone got in and took the whole thing as well as forced some storage doors open. ",
          "id": 94547,
          "location_description": null,
          "location_type": null,
          "media": Object {
            "image_url": null,
            "image_url_thumb": null,
          },
          "occurred_at": 1543309200,
          "source": Object {
            "api_url": "https://bikeindex.org/api/v1/bikes/480323",
            "html_url": "https://bikeindex.org/bikes/480323",
            "name": "BikeIndex.org",
          },
          "title": "Stolen 2015 Gepida Alboin crs 500(silver, gray or bare metal)",
          "type": "Theft",
          "type_properties": null,
          "updated_at": 1550866132,
          "url": "https://bikewise.org/api/v1/incidents/94547",
        }
      }
    />
  </div>
</DataStateNotifier>
`;

exports[`Detail should pass the loading message to the DataStateNotifier component 1`] = `
<DataStateNotifier
  dataError=""
  dataLoading="Loading data ..."
  resetDataError={[Function]}
>
  <div
    className="Detail"
  >
    <DetailHeader
      item={
        Object {
          "address": "Berlin, 12051, DE",
          "description": "Locked cellar in Warthestrasse 8, Kryptonite U-lock with cable both tyres locked to frame. Someone got in and took the whole thing as well as forced some storage doors open. ",
          "id": 94547,
          "location_description": null,
          "location_type": null,
          "media": Object {
            "image_url": null,
            "image_url_thumb": null,
          },
          "occurred_at": 1543309200,
          "source": Object {
            "api_url": "https://bikeindex.org/api/v1/bikes/480323",
            "html_url": "https://bikeindex.org/bikes/480323",
            "name": "BikeIndex.org",
          },
          "title": "Stolen 2015 Gepida Alboin crs 500(silver, gray or bare metal)",
          "type": "Theft",
          "type_properties": null,
          "updated_at": 1550866132,
          "url": "https://bikewise.org/api/v1/incidents/94547",
        }
      }
    />
    <DetailInfos
      item={
        Object {
          "address": "Berlin, 12051, DE",
          "description": "Locked cellar in Warthestrasse 8, Kryptonite U-lock with cable both tyres locked to frame. Someone got in and took the whole thing as well as forced some storage doors open. ",
          "id": 94547,
          "location_description": null,
          "location_type": null,
          "media": Object {
            "image_url": null,
            "image_url_thumb": null,
          },
          "occurred_at": 1543309200,
          "source": Object {
            "api_url": "https://bikeindex.org/api/v1/bikes/480323",
            "html_url": "https://bikeindex.org/bikes/480323",
            "name": "BikeIndex.org",
          },
          "title": "Stolen 2015 Gepida Alboin crs 500(silver, gray or bare metal)",
          "type": "Theft",
          "type_properties": null,
          "updated_at": 1550866132,
          "url": "https://bikewise.org/api/v1/incidents/94547",
        }
      }
    />
  </div>
</DataStateNotifier>
`;

exports[`Detail should render the component correctly 1`] = `
<DataStateNotifier
  dataError=""
  dataLoading=""
  resetDataError={[Function]}
>
  <div
    className="Detail"
  >
    <DetailHeader
      item={
        Object {
          "address": "Berlin, 12051, DE",
          "description": "Locked cellar in Warthestrasse 8, Kryptonite U-lock with cable both tyres locked to frame. Someone got in and took the whole thing as well as forced some storage doors open. ",
          "id": 94547,
          "location_description": null,
          "location_type": null,
          "media": Object {
            "image_url": null,
            "image_url_thumb": null,
          },
          "occurred_at": 1543309200,
          "source": Object {
            "api_url": "https://bikeindex.org/api/v1/bikes/480323",
            "html_url": "https://bikeindex.org/bikes/480323",
            "name": "BikeIndex.org",
          },
          "title": "Stolen 2015 Gepida Alboin crs 500(silver, gray or bare metal)",
          "type": "Theft",
          "type_properties": null,
          "updated_at": 1550866132,
          "url": "https://bikewise.org/api/v1/incidents/94547",
        }
      }
    />
    <DetailInfos
      item={
        Object {
          "address": "Berlin, 12051, DE",
          "description": "Locked cellar in Warthestrasse 8, Kryptonite U-lock with cable both tyres locked to frame. Someone got in and took the whole thing as well as forced some storage doors open. ",
          "id": 94547,
          "location_description": null,
          "location_type": null,
          "media": Object {
            "image_url": null,
            "image_url_thumb": null,
          },
          "occurred_at": 1543309200,
          "source": Object {
            "api_url": "https://bikeindex.org/api/v1/bikes/480323",
            "html_url": "https://bikeindex.org/bikes/480323",
            "name": "BikeIndex.org",
          },
          "title": "Stolen 2015 Gepida Alboin crs 500(silver, gray or bare metal)",
          "type": "Theft",
          "type_properties": null,
          "updated_at": 1550866132,
          "url": "https://bikewise.org/api/v1/incidents/94547",
        }
      }
    />
  </div>
</DataStateNotifier>
`;
